--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.64.3",
     "react-native-dropdown-picker": "^5.4.0",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-multiple-select": "^0.5.7",
     "react-native-safe-area-context": "3.3.2",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
